--- a/config/models.conf
+++ b/config/models.conf
@@ -18,6 +18,16 @@ model_config_list: {
         versions: 1111
         } 
       } 
+    },
+    config: {
+    name: "mobilenet",
+    base_path: "/models/mobilenet",
+    model_platform: "tensorflow",
+    model_version_policy: {
+       specific: {
+        versions: 1111
+        } 
+      } 
     }
 }
 
