transport images bytes instead of image floats version

--- a/config/models.conf
+++ b/config/models.conf
@@ -20,8 +20,8 @@ model_config_list: {
       } 
     },
     config: {
-    name: "mobilenet",
-    base_path: "/models/mobilenet",
+    name: "mnet",
+    base_path: "/models/mnet",
     model_platform: "tensorflow",
     model_version_policy: {
        specific: {
